v4.3.6   - Bug fixed limiting of images for formats without a
	   display window ( png, jpg, etc).  Now memory setting works
	   for them too, not just for exrs.

v4.3.5   - Bug fixed CTL RRT transform not getting selected when it
	   was selected thru the menus.  The 8bits, 16bits, float, etc.
	   would work fine.
	 - Bug fixed audio scrubbing which would, in latest versions,
	   not work completely right.
	 - Preload cache now works correctly when auto playback is off.
	 - Bug fixed Windows' NVIDIA driver bug showing images with
	   upped gamma.

v4.3.4   - Bug fixed cache sliding when it was stopped near the end of
	   a sequence that did not have all frames cached.  This was
	   a Windows problem.
	 - Bug fixed cache looping.  Now the preload cache wraps
	   around the end and starts at the beginning again when
	   it is stopped near the end.
	 - Made start up time be much faster, as it now does not load
	   any frames until the GUI is up and idle.
	 - Made background image show on first run if it is different
	   than foreground image.  Note that this makes the gui a tad
	   slower on start up.

v4.3.3   - Bug fixed EDL playback as it had gotten broken with the new
	   timeline algorithm.
	 - Note that playback of BG images works only when the FG caches
	   are full or, alternatively, when not using cache nor play all
	   frames.

v4.3.2   - Improved cache loading of 4K and 8K images.  Now the timeline
	   will recycle those according to a setting in Gb.  The setting,
	   Preferences->Cache->Maximum Memory allows you to set a
	   maximum memory for all the cache frames, after which, they
	   are recycled.
	 - Improved cache playback sliding itself to the next available
	   frames to continue playback when playback is stopped.
	 - Added a Preferences->Playback->Play All Frames switch to play
	   all frames of a sequence without skipping any.  This is
	   similar to cache active when the image is high res (4K/6K/8K).